# ipc-bench

./: Cargo.toml  README.md  RESULTS.md
.github/workflows/: ci.yml
benchmarks/harness/: Cargo.toml
benchmarks/harness/src/: affinity.rs  config.rs  lib.rs  process.rs
benchmarks/methods/native/support/: Cargo.toml
benchmarks/methods/native/support/src/: alpc.rs  iceoryx2_publish_subscribe.rs  iceoryx2_request_response.rs  lib.rs  mailslot.rs  named_pipe.rs  raw_sync_shared_memory.rs  shared_memory.rs  util.rs
benchmarks/methods/python/: benchmark_adapter.py
results/published/windows11-high-iterations/: af-unix-s1024-native.json  af-unix-s16384-native.json  af-unix-s32704-native.json  af-unix-s4096-native.json  af-unix-s64-native.json  alpc-s1024-native.json  alpc-s16384-native.json  alpc-s32704-native.json  alpc-s4096-native.json  alpc-s64-native.json  anon-pipe-s1024-native.json  anon-pipe-s16384-native.json  anon-pipe-s32704-native.json  anon-pipe-s4096-native.json  anon-pipe-s64-native.json  copy-roundtrip-s1024-native.json  copy-roundtrip-s16384-native.json  copy-roundtrip-s32704-native.json  copy-roundtrip-s4096-native.json  copy-roundtrip-s64-native.json  iceoryx2-publish-subscribe-loan-s1024-native.json  iceoryx2-publish-subscribe-loan-s16384-native.json  iceoryx2-publish-subscribe-loan-s32704-native.json  iceoryx2-publish-subscribe-loan-s4096-native.json  iceoryx2-publish-subscribe-loan-s64-native.json  mailslot-s1024-native.json  (+109 more)
scripts/: generate-published-charts.py  generate-published-tables.py  run-benchmarks.ps1  run-high-iteration-benchmarks.ps1
(+149 files in other folders)
